--- a/references.bib
+++ b/references.bib
@@ -1,160 +1,140 @@
+@Article{Falster-2015,
+  title = {{BAAD}: a {Biomass} {And} {Allometry} {Database} for woody plants},
+  volume = {96},
+  url = {http://www.esajournals.org/doi/abs/10.1890/14-1889.1},
+  doi = {10.1890/14-1889.1},
+  number = {5},
+  journal = {Ecology},
+  author = {Daniel S. Falster and Remko A. Duursma and Masae I. Ishihara and Diego R. Barneche and Richard G. FitzJohn and Angelica V\aarhammar and Masahiro Aiba and Makoto Ando and Niels Anten and Michael J. Aspinwall and Jennifer L. Baltzer and Christopher Baraloto and Michael Battaglia and John J. Battles and Ben Bond-Lamberty and Michiel {van Breugel} and James Camac and Yves Claveau and Llu\'is Coll and Masako Dannoura and Sylvain Delagrange and Jean-Christophe Domec and Farrah Fatemi and Wang Feng and Veronica Gargaglione and Yoshiaki Goto and Akio Hagihara and Jefferson S. Hall and Steve Hamilton and Degi Harja and Tsutom Hiura and Robert Holdaway and Lindsay S. Hutley and Tomoaki Ichie and Eric J. Jokela and Anu Kantola and Jeff W. G. Kelly and Tanaka Kenzo and David King and Brian D. Kloeppel and Takashi Kohyama and Akira Komiyama and Jean-Paul Laclau and Christopher H. Lusk and Douglas A. Maguire and Guerric {le Maire} and Annikki Mäkelä and Lars Markesteijn and John Marshall and Katherine McCulloh and Itsuo Miyata and Karel Mokany and Shigeta Mori and Randall W. Myster and Masahiro Nagano and Shawna L. Naidu and Yann Nouvellon and Anthony P. O'Grady and Kevin L. O'Hara and Toshiyuki Ohtsuka and Noriyuki Osada and Olusegun O. Osunkoya and Pablo Luis Peri and Any Mary Petritan and Lourens Poorter and Angelika Portsmuth and Catherine Potvin and Johannes Ransijn and Douglas Reid and Sabina C. Ribeiro and Scott D. Roberts and Rolando Rodríguez and Angela Saldaña-Acosta and Ignacio Santa-Regina and Kaichiro Sasa and N. Galia Selaya and Stephen C. Sillett and Frank Sterck and Kentaro Takagi and Takeshi Tange and Hiroyuki Tanouchi and David Tissue and Toru Umehara and Hajime Utsugi and Matthew A. Vadeboncoeur and Fernando Valladares and Petteri Vanninen and Jian R. Wang and Elizabeth Wenk and Richard Williams and Fabiano {de Aquino Ximenes} and Atsushi Yamaba and Toshihiro Yamada and Takuo Yamakura and Ruth D. Yanai and Robert A. York},
+  year = {2015},
+  pages = {1445},
+}
 
-@Article{westoby2002,
-  title = {Plant {{Ecological Strategies}}: {{Some Leading Dimensions}} of {{Variation Between Species}}},
+@Article{Falster-2017,
+  title = {Versioned data: why it is needed and how it can be achieved (easily and cheaply)},
+  url = {https://peerj.com/preprints/3401},
+  journal = {PeerJ Preprints},
+  number = {e3401v1},
+  author = {Daniel Falster and Richard G. FitzJohn and Matthew W. Pennell and William K. Cornwell},
+  year = {2017},
+  doi = {10.7287/peerj.preprints.3401v1},
+}
+
+@Article{Gallagher-2011,
+  title = {Traits and ecological strategies of {Australian} tropical and temperate climbing plants},
+  volume = {38},
+  url = {http://onlinelibrary.wiley.com/doi/10.1111/j.1365-2699.2010.02455.x/abstract},
+  doi = {10.1111/j.1365-2699.2010.02455.x},
+  number = {5},
+  journal = {Journal of Biogeography},
+  author = {Rachael V. Gallagher and Michelle R. Leishman and Angela T. Moles},
+  year = {2011},
+  pages = {828--839},
+}
+
+@Article{Gallagher-2012,
+  title = {A global analysis of trait variation and evolution in climbing plants},
+  volume = {39},
+  url = {http://onlinelibrary.wiley.com/doi/10.1111/j.1365-2699.2012.02773.x/abstract},
+  doi = {10.1111/j.1365-2699.2012.02773.x},
+  number = {10},
+  journal = {Journal of Biogeography},
+  author = {Rachael V. Gallagher and Michelle R. Leishman},
+  year = {2012},
+  pages = {1757--1771},
+}
+
+@Article{Haque-2017,
+  title = {How well documented is {Australia}'s flora? {Understanding} spatial bias in vouchered plant specimens},
+  volume = {42},
+  url = {http://onlinelibrary.wiley.com/doi/10.1111/aec.12487/abstract},
+  doi = {10.1111/aec.12487},
+  number = {6},
+  journal = {Austral Ecology},
+  author = {Md. Mohasinul Haque and David A. Nipperess and Rachael V. Gallagher and Linda J. Beaumont},
+  year = {2017},
+  pages = {690--699},
+}
+
+@Article{Kattge-2011a,
+  title = {{TRY} -- a global database of plant traits},
+  volume = {17},
+  url = {http://onlinelibrary.wiley.com/doi/10.1111/j.1365-2486.2011.02451.x/abstract},
+  doi = {10.1111/j.1365-2486.2011.02451.x},
+  journal = {Global Change Biology},
+  author = {J. Kattge and S. Díaz and S. Lavorel and I. C Prentice and P. Leadley and G. Bönisch and E. Garnier and M. Westoby and P. B Reich and I. J Wright and J. H. C Cornelissen and C. Violle and S. P Harrison and P. M {van Bodegom} and M. Reichstein and B. J Enquist and N. A Soudzilovskaia and D. D Ackerly and M. Anand and O. Atkin and M. Bahn and T. R Baker and D. Baldocchi and R. Bekker and C. C Blanco and B. Blonder and W. J Bond and R. Bradstock and D. E Bunker and F. Casanoves and J. Cavender‐Bares and J. Q Chambers and F. S {Chapin III} and J. Chave and D. Coomes and W. K Cornwell and J. M Craine and B. H Dobrin and L. Duarte and W. Durka and J. Elser and G. Esser and M. Estiarte and W. F Fagan and J. Fang and F. Fernández‐Méndez and A. Fidelis and B. Finegan and O. Flores and H. Ford and D. Frank and G. T Freschet and N. M Fyllas and R. V Gallagher and W. A Green and A. G Gutierrez and T. Hickler and S. I Higgins and J. G Hodgson and A. Jalili and S. Jansen and C. A Joly and A. J Kerkhoff and D. Kirkup and K. Kitajima and M. Kleyer and S. Klotz and J. M. H Knops and K. Kramer and I. Kühn and H. Kurokawa and D. Laughlin and T. D Lee and M. Leishman and F. Lens and T. Lenz and S. L Lewis and J. Lloyd and J. Llusià and F. Louault and S. Ma and M. D Mahecha and P. Manning and T. Massad and B. E Medlyn and J. Messier and A. T Moles and S. C Müller and K. Nadrowski and S. Naeem and Ü Niinemets and S. Nöllert and A. Nüske and R. Ogaya and J. Oleksyn and V. G Onipchenko and Y. Onoda and J. Ordoñez and G. Overbeck and W. A Ozinga and S. Patiño and S. Paula and J. G Pausas and J. Peñuelas and O. L Phillips and V. Pillar and H. Poorter and L. Poorter and P. Poschlod and A. Prinzing and R. Proulx and A. Rammig and S. Reinsch and B. Reu and L. Sack and B. Salgado‐Negret and J. Sardans and S. Shiodera and B. Shipley and A. Siefert and E. Sosinski and J. ‐F Soussana and E. Swaine and N. Swenson and K. Thompson and P. Thornton and M. Waldram and E. Weiher and M. White and S. White and S. J. Wright and B. Yguel and S. Zaehle and A. E Zanne and C. Wirth},
+  year = {2011},
+  pages = {2905--2935},
+}
+
+@Article{Kattge-2011b,
+  title = {A generic structure for plant trait databases: {A} generic structure for plant trait databases},
+  volume = {2},
+  url = {http://doi.wiley.com/10.1111/j.2041-210X.2010.00067.x},
+  doi = {10.1111/j.2041-210X.2010.00067.x},
+  number = {2},
+  journal = {Methods in Ecology and Evolution},
+  author = {Jens Kattge and Kiona Ogle and Gerhard Bönisch and Sandra Díaz and Sandra Lavorel and Joshua Madin and Karin Nadrowski and Stephanie Nöllert and Karla Sartor and Christian Wirth},
+  year = {2011},
+  pages = {202--213},
+}
+
+@Article{Madin-2007,
+  title = {An ontology for describing and synthesizing ecological observation data},
+  volume = {2},
+  url = {http://www.sciencedirect.com/science/article/pii/S1574954107000362},
+  doi = {10.1016/j.ecoinf.2007.05.004},
+  number = {3},
+  journal = {Ecological Informatics},
+  author = {Joshua Madin and Shawn Bowers and Mark Schildhauer and Sergeui Krivov and Deana Pennington and Ferdinando Villa},
+  year = {2007},
+  pages = {279--296},
+}
+
+@Article{Madin-2008,
+  title = {Advancing ecological research with ontologies},
+  volume = {23},
+  url = {http://www.sciencedirect.com/science/article/pii/S0169534708000384},
+  doi = {10.1016/j.tree.2007.11.007},
+  number = {3},
+  journal = {Trends in Ecology \& Evolution},
+  author = {Joshua S. Madin and Shawn Bowers and Mark P. Schildhauer and Matthew B. Jones},
+  year = {2008},
+  pages = {159--168},
+}
+
+@Article{Madin-2016,
+  title = {The {Coral Trait Database}, a curated database of trait information for coral species from the global oceans},
+  volume = {3},
+  url = {http://www.nature.com/articles/sdata201617},
+  doi = {10.1038/sdata.2016.17},
+  journal = {Scientific Data},
+  author = {Joshua S. Madin and Kristen D. Anderson and Magnus Heide Andreasen and Tom C. L. Bridge and Stephen D. Cairns and Sean R. Connolly and Emily S. Darling and Marcela Diaz and Daniel S. Falster and Erik C. Franklin and Ruth D. Gates and Mia O. Hoogenboom and Danwei Huang and Sally A. Keith and Matthew A. Kosnik and Chao-Yang Kuo and Janice M. Lough and Catherine E. Lovelock and Osmar Luiz and Julieta Martinelli and Toni Mizerek and John M. Pandolfi and Xavier Pochon and Morgan S. Pratchett and Hollie M. Putnam and T. Edward Roberts and Michael Stat and Carden C. Wallace and Elizabeth Widman and Andrew H. Baird},
+  year = {2016},
+  pages = {160017},
+}
+
+@Article{Westoby-2002,
+  title = {Plant ecological strategies: Some leading dimensions of variation between species},
+  author = {Mark Westoby and Daniel S. Falster and Angela T. Moles and Peter A. Vesk and Ian J. Wright},
   volume = {33},
   issn = {0066-4162},
   url = {https://doi.org/10.1146/annurev.ecolsys.33.010802.150452},
   doi = {10.1146/annurev.ecolsys.33.010802.150452},
-  abstract = {? Abstract?An important aim of plant ecology is to identify leading dimensions of ecological variation among species and to understand the basis for them. Dimensions that can readily be measured would be especially useful, because they might offer a path towards improved worldwide synthesis across the thousands of field experiments and ecophysiological studies that use just a few species each. Four dimensions are reviewed here. The leaf mass per area?leaf lifespan (LMA-LL) dimension expresses slow turnover of plant parts (at high LMA and long LL), long nutrient residence times, and slow response to favorable growth conditions. The seed mass?seed output (SM-SO) dimension is an important predictor of dispersal to establishment opportunities (seed output) and of establishment success in the face of hazards (seed mass). The LMA-LL and SM-SO dimensions are each underpinned by a single, comprehensible tradeoff, and their consequences are fairly well understood. The leaf size?twig size (LS-TS) spectrum has obvious consequences for the texture of canopies, but the costs and benefits of large versus small leaf and twig size are poorly understood. The height dimension has universally been seen as ecologically important and included in ecological strategy schemes. Nevertheless, height includes several tradeoffs and adaptive elements, which ideally should be treated separately. Each of these four dimensions varies at the scales of climate zones and of site types within landscapes. This variation can be interpreted as adaptation to the physical environment. Each dimension also varies widely among coexisting species. Most likely this within-site variation arises because the ecological opportunities for each species depend strongly on which other species are present, in other words, because the set of species at a site is a stable mixture of strategies.},
   number = {1},
   journaltitle = {Annual Review of Ecology and Systematics},
-  shortjournal = {Annu. Rev. Ecol. Syst.},
-  urldate = {2018-06-20},
-  date = {2002-11-01},
+  date = {2002},
   pages = {125-159},
-  author = {Mark Westoby and Daniel S. Falster and Angela T. Moles and Peter A. Vesk and Ian J. Wright},
 }
-@Article{shipley2016,
-  langid = {english},
-  title = {Reinforcing Loose Foundation Stones in Trait-Based Plant Ecology},
-  volume = {180},
-  issn = {0029-8549, 1432-1939},
-  url = {http://link.springer.com/10.1007/s00442-016-3549-x},
-  doi = {10.1007/s00442-016-3549-x},
-  number = {4},
-  journaltitle = {Oecologia},
-  urldate = {2018-03-12},
-  date = {2016-04},
-  pages = {923-931},
-  author = {Bill Shipley and Francesco {De Bello} and J. Hans C. Cornelissen and Etienne Lalibert{\a'e} and Daniel C. Laughlin and Peter B. Reich},
-  file = {C:\\Users\\Dony Indiarto\\Zotero\\storage\\986B8IJI\\Shipley et al. - 2016 - Reinforcing loose foundation stones in trait-based.pdf;C:\\Users\\Dony Indiarto\\Zotero\\storage\\PVXF8JML\\10.html},
-}
-@Article{moles2014,
-  langid = {english},
-  title = {Which Is a Better Predictor of Plant Traits: Temperature or Precipitation?},
-  volume = {25},
-  issn = {1654-1103},
-  url = {https://onlinelibrary.wiley.com/doi/abs/10.1111/jvs.12190},
-  doi = {10.1111/jvs.12190},
-  shorttitle = {Which Is a Better Predictor of Plant Traits},
-  abstract = {Question Are plant traits more closely correlated with mean annual temperature, or with mean annual precipitation? Location Global. Methods We quantified the strength of the relationships between temperature and precipitation and 21 plant traits from 447,961 species-site combinations worldwide. We used meta-analysis to provide an overall answer to our question. Results Mean annual temperature was significantly more strongly correlated with plant traits than was mean annual precipitation. Conclusions Our study provides support for some of the assumptions of classical vegetation theory, and points to many interesting directions for future research. The relatively low R2 values for precipitation might reflect the weak link between mean annual precipitation and the availability of water to plants.},
-  number = {5},
-  journaltitle = {Journal of Vegetation Science},
-  urldate = {2018-06-20},
-  date = {2014},
-  pages = {1167-1180},
-  keywords = {functional traits,compound leaves,dispersal syndrome,leaf life span,nitrogen fixation,photosynthetic pathway,plant height,plant life span,seed mass,spinescence,specific leaf area,Climate},
-  author = {Angela T. Moles and Sarah E. Perkins and Shawn W. Laffan and Habacuc FloresNANAMoreno and Monica Awasthy and Marianne L. Tindall and Lawren Sack and Andy Pitman and Jens Kattge and Lonnie W. Aarssen and Madhur Anand and Michael Bahn and Benjamin Blonder and Jeannine CavendeNArNABares and J. Hans C. Cornelissen and Will K. Cornwell and Sandra D{\a'\i}az and John B. Dickie and Gr{\~A}{\textcopyright}goire T. Freschet and Joshua G. Griffiths and Alvaro G. Gutierrez and Frank A. Hemmings and Thomas Hickler and Timothy D. Hitchcock and Matthew Keighery and Michael Kleyer and Hiroko Kurokawa and Michelle R. Leishman and Kenwin Liu and {\~A}{\oe}lo Niinemets and Vladimir Onipchenko and Yusuke Onoda and Josep Penuelas and Val{\~A}{\textcopyright}rio D. Pillar and Peter B. Reich and Satomi Shiodera and Andrew Siefert and Enio E. Sosinski and Nadejda A. Soudzilovskaia and Emily K. Swaine and Nathan G. Swenson and Peter M. {van Bodegom} and Laura Warman and Evan Weiher and Ian J. Wright and Hongxiang Zhang and Martin Zobel and Stephen P. Bons},
-  file = {C:\\Users\\Dony Indiarto\\Zotero\\storage\\CZYYN8KQ\\Moles et al. - Which is a better predictor of plant traits tempe.pdf;C:\\Users\\Dony Indiarto\\Zotero\\storage\\7MDN4RTX\\jvs.html},
-}
-@Article{vanbodegom2014,
-  langid = {english},
-  title = {A Fully Traits-Based Approach to Modeling Global Vegetation Distribution},
-  volume = {111},
-  issn = {0027-8424, 1091-6490},
-  url = {http://www.pnas.org/cgi/doi/10.1073/pnas.1304551110},
-  doi = {10.1073/pnas.1304551110},
-  number = {38},
-  journaltitle = {Proceedings of the National Academy of Sciences},
-  urldate = {2018-03-12},
-  date = {2014-09-23},
-  pages = {13733-13738},
-  keywords = {functional variation,global vegetation map,probabilistic model,trait-environment relationships,vegetation attributes},
-  author = {P. M. {van Bodegom} and J. C. Douma and L. M. Verheijen},
-  options = {useprefix=true},
-  file = {C:\\Users\\Dony Indiarto\\Zotero\\storage\\YX62GBVX\\13733.full.pdf},
-}
-@Article{albert2010,
-  langid = {english},
-  title = {A Multi-Trait Approach Reveals the Structure and the Relative Importance of Intra- vs. Interspecific Variability in Plant Traits},
-  volume = {24},
-  issn = {1365-2435},
-  url = {https://besjournals.onlinelibrary.wiley.com/doi/abs/10.1111/j.1365-2435.2010.01727.x},
-  doi = {10.1111/j.1365-2435.2010.01727.x},
-  abstract = {1. Functional traits have been extensively used to describe, group and rank species according to their functions. There is now growing evidence that intraspecific functional variability, as well as interspecific variability, can have significant effects on community dynamics and ecosystem functioning. A core hypothesis for the use of functional traits expressed as species means, that their intraspecific variability is negligible compared with their interspecific variability, has however been too rarely tested empirically. We then addressed four questions: Is intraspecific functional variability across species ranges negligible compared with interspecific variability? Are the major resource economics trade-off and functional strategies robust to individual trait variability? Are species rankings or ordination robust across species ranges once considering intraspecific variability? Can species be discriminated by their leaf traits? 2. Using an environmentally stratified sampling design within an alpine catchment, we collected five functional traits for 13 common plant species with contrasting life histories and traits. Several populations from a range of environmental conditions were then sampled for each species across their ranges. 3. With an original combination of single-trait and multi-trait analyses, we highlighted a non-negligible contribution of intraspecific variability to overall functional trait variability (∼30\%). Although not affecting general and well-known functional trade-offs and strategies, intraspecific functional variability had the potential to alter species ordination and produced a functional continuum rather than a clear-cut species classification. 4. Deciding whether intraspecific functional variability can be considered as negligible – species being represented by mean trait values –, or not – species being represented by multivariate trait distributions –, is an essential question for multiple ecological issues. However, this decision cannot be generic, but will depend on the studied system and selected traits and species, as well as on study objectives.},
-  number = {6},
-  journaltitle = {Functional Ecology},
-  urldate = {2018-06-15},
-  date = {2010},
-  pages = {1192-1201},
-  keywords = {alpine ecosystems,environmental gradients,functional strategies,interspecific and intraspecific variability,leaf economics spectrum,linear mixed models,plant functional traits,species ranking},
-  author = {Cecile Helene Albert and Wilfried Thuiller and Nigel Gilles Yoccoz and Rolland Douzet and Serge Aubert and Sandra Lavorel},
-  file = {C:\\Users\\Dony Indiarto\\Zotero\\storage\\NHVRDW4I\\Albert et al. - A multi-trait approach reveals the structure and t.pdf;C:\\Users\\Dony Indiarto\\Zotero\\storage\\4JKFTTMF\\j.1365-2435.2010.01727.html},
-}
-@Article{fortunel2009,
-  title = {Allocation Strategies and Seed Traits Are Hardly Affected by Nitrogen Supply in 18 Species Differing in Successional Status},
-  volume = {11},
-  issn = {1433-8319},
-  url = {http://www.sciencedirect.com/science/article/pii/S1433831909000213},
-  doi = {10.1016/j.ppees.2009.04.003},
-  abstract = {Species performance depends on ecological strategies, revealed by suites of traits, conferring different relative ecological advantages in different environments. Although current knowledge on plant strategies along successional gradients is derived from studies conducted in situ, actually quantifying these strategies requires disentangling the effects of environmental factors from intrinsic differences between species. Here we tested whether allocation strategies and seed traits differ among successional stages and nitrogen levels. To this aim, we assessed biomass and nitrogen allocations and seed traits variations for 18 species, differing in life history and belonging to three stages of a Mediterranean old-field succession. These species were grown as monocultures in an experimental garden under limiting and non-limiting nitrogen supply. Early successional species allocated allometrically more nitrogen and proportionally more biomass to reproduction, and set more seeds than later successional species. Seed mass increased with successional status and was negatively related to seed number. Early successional species thus produced more but less-provisioned seeds, suggesting better colonization abilities. These patterns were not the sole consequence of the replacement of annuals by perennials along the successional gradient, since comparable trends were also observed within each life history. Allocation patterns were generally not altered by nitrogen supply and the higher nitrogen content in vegetative organs of plants grown under high nitrogen supply was not retranslocated from leaves to seeds during seed development. We therefore conclude that differences in plant ecological strategies in species characteristics from contrasting successional stages appear to be intrinsic properties of the studied species, and independent from environmental conditions.},
-  number = {4},
-  journaltitle = {Perspectives in Plant Ecology, Evolution and Systematics},
-  shortjournal = {Perspectives in Plant Ecology, Evolution and Systematics},
-  urldate = {2018-06-21},
-  date = {2009-11-20},
-  pages = {267-283},
-  keywords = {Allometry,Nitrogen concentration of organs,Nitrogen supply,Reproductive output,Seed mass,Succession},
-  author = {Claire Fortunel and Cyrille Violle and Catherine Roumet and Bruno Buatois and Marie-Laure Navas and Eric Garnier},
-  file = {C:\\Users\\Dony Indiarto\\Zotero\\storage\\DDPIXGCV\\Fortunel et al. - 2009 - Allocation strategies and seed traits are hardly a.pdf;C:\\Users\\Dony Indiarto\\Zotero\\storage\\3XAQ7K9Q\\S1433831909000213.html},
-}
-@Article{kazakou2013,
-  langid = {english},
-  title = {Are Trait‐based Species Rankings Consistent across Data Sets and Spatial Scales?},
-  volume = {25},
-  issn = {1654-1103},
-  url = {https://onlinelibrary.wiley.com/doi/abs/10.1111/jvs.12066},
-  doi = {10.1111/jvs.12066},
-  number = {1},
-  journaltitle = {Journal of Vegetation Science},
-  urldate = {2018-06-21},
-  date = {2013-04-02},
-  pages = {235-247},
-  author = {Elena Kazakou and Cyrille Violle and Catherine Roumet and Marie-Laure Navas and Denis Vile and Jens Kattge and Eric Garnier},
-  file = {C:\\Users\\Dony Indiarto\\Zotero\\storage\\YYAWWSEJ\\jvs.html},
-}
-@Article{violle2012,
-  title = {The Return of the Variance: Intraspecific Variability in Community Ecology},
-  volume = {27},
-  issn = {0169-5347},
-  url = {http://www.sciencedirect.com/science/article/pii/S0169534711003375},
-  doi = {10.1016/j.tree.2011.11.014},
-  shorttitle = {The Return of the Variance},
-  abstract = {Despite being recognized as a promoter of diversity and a condition for local coexistence decades ago, the importance of intraspecific variance has been neglected over time in community ecology. Recently, there has been a new emphasis on intraspecific variability. Indeed, recent developments in trait-based community ecology have underlined the need to integrate variation at both the intraspecific as well as interspecific level. We introduce new T-statistics (‘T’ for trait), based on the comparison of intraspecific and interspecific variances of functional traits across organizational levels, to operationally incorporate intraspecific variability into community ecology theory. We show that a focus on the distribution of traits at local and regional scales combined with original analytical tools can provide unique insights into the primary forces structuring communities.},
-  number = {4},
-  journaltitle = {Trends in Ecology \& Evolution},
-  shortjournal = {Trends in Ecology \& Evolution},
-  urldate = {2018-06-20},
-  date = {2012-04-01},
-  pages = {244-252},
-  keywords = {species coexistence,community assembly,intraspecific variation,functional trait,mean field approach,species diversity,T-statistics,variance},
-  author = {Cyrille Violle and Brian J. Enquist and Brian J. McGill and Lin Jiang and C{\~A}{\textcopyright}cile H. Albert and Catherine Hulshof and Vincent Jung and Julie Messier},
-  file = {C:\\Users\\Dony Indiarto\\Zotero\\storage\\K6M5ZQLX\\Violle et al. - 2012 - The return of the variance intraspecific variabil.pdf;C:\\Users\\Dony Indiarto\\Zotero\\storage\\EWT765XT\\S0169534711003375.html},
-}
-@Book{grime1979plant,
-  title = {Plant Strategies and Vegetation Processes},
-  isbn = {978-0-471-99692-7},
-  url = {https://books.google.com.au/books?id=75nwAAAAMAAJ},
-  publisher = {{Wiley}},
-  date = {1979},
-  author = {J.P. Grime},
-  lccn = {78018523},
-}
-@Article{berg2010,
-  langid = {english},
-  title = {Trait Plasticity in Species Interactions: A Driving Force of Community Dynamics},
-  volume = {24},
-  issn = {0269-7653, 1573-8477},
-  url = {https://link.springer.com/article/10.1007/s10682-009-9347-8},
-  doi = {10.1007/s10682-009-9347-8},
-  shorttitle = {Trait Plasticity in Species Interactions},
-  abstract = {Evolutionary community ecology is an emerging field of study that includes evolutionary principles such as individual trait variation and plasticity of traits to provide a more mechanistic insight as to how species diversity is maintained and community processes are shaped across time and space. In this review we explore phenotypic plasticity in functional traits and its consequences at the community level. We argue that resource requirement and resource uptake are plastic traits that can alter fundamental and realised niches of species in the community if environmental conditions change. We conceptually add to niche models by including phenotypic plasticity in traits involved in resource allocation under stress. Two qualitative predictions that we derive are: (1) plasticity in resource requirement induced by availability of resources enlarges the fundamental niche of species and causes a reduction of vacant niches for other species and (2) plasticity in the proportional resource uptake results in expansion of the realized niche, causing a reduction in the possibility for coexistence with other species. We illustrate these predictions with data on the competitive impact of invasive species. Furthermore, we review the quickly increasing number of empirical studies on evolutionary community ecology and demonstrate the impact of phenotypic plasticity on community composition. Among others, we give examples that show that differences in the level of phenotypic plasticity can disrupt species interactions when environmental conditions change, due to effects on realized niches. Finally, we indicate several promising directions for future phenotypic plasticity research in a community context. We need an integrative, trait-based approach that has its roots in community and evolutionary ecology in order to face fast changing environmental conditions such as global warming and urbanization that pose ecological as well as evolutionary challenges.},
-  number = {3},
-  journaltitle = {Evolutionary Ecology},
-  shortjournal = {Evol Ecol},
-  urldate = {2018-06-21},
-  date = {2010-05-01},
-  pages = {617-629},
-  author = {Matty P. Berg and Jacintha Ellers},
-  file = {C:\\Users\\Dony Indiarto\\Zotero\\storage\\H2QZQFWT\\Berg and Ellers - 2010 - Trait plasticity in species interactions a drivin.pdf;C:\\Users\\Dony Indiarto\\Zotero\\storage\\R8XF3MVF\\s10682-009-9347-8.html},
+
+@Article{Wright-2017,
+  title = {Global climatic drivers of leaf size},
+  volume = {357},
+  url = {http://science.sciencemag.org/content/357/6354/917},
+  doi = {10.1126/science.aal4760},
+  number = {6354},
+  journal = {Science},
+  author = {Ian J. Wright and Ning Dong and Vincent Maire and I. Colin Prentice and Mark Westoby and Sandra Díaz and Rachael V. Gallagher and Bonnie F. Jacobs and Robert Kooyman and Elizabeth A. Law and Michelle R. Leishman and Ülo Niinemets and Peter B. Reich and Lawren Sack and Rafael Villar and Han Wang and Peter Wilf},
+  year = {2017},
+  pages = {917--921},
 }
