--- a/ms.Rmd
+++ b/ms.Rmd
@@ -5,26 +5,35 @@ csl: assets/nature.csl
 output:
   word_document:
     reference_docx: assets/manuscriptstyle.docx
-  html_document:
-    number_sections: yes
-    theme: flatly
-  pdf_document:
-    keep_tex: no
-geometry: margin=0.75in
-fontsize: 9pt
 editor_options:
   chunk_output_type: console
 ---
 
 
-```{r setup, include=FALSE, warning=FALSE, message=FALSE}
-library(knitr)
-library(rmarkdown)
-library(readr)
-library(dplyr)
-
-austraits <- readRDS("data/austraits.rds")
+```{r setup, echo=FALSE, message=FALSE, warning=FALSE, results="hide"}
+# knitr defaults
+root.dir = rprojroot::find_root("austraits_ms.Rproj")
+knitr::opts_knit$set(root.dir = root.dir)
+knitr::opts_chunk$set(echo=FALSE, cache=FALSE, results='asis', message=FALSE, warning=FALSE)
 ```
+
+
+```{r, echo=FALSE, message=FALSE, warning=FALSE, results="hide"}
+library(knitr)
+library(tidyverse)
+library(rmarkdown)
+
+source("R/ms.R")
+
+## Assumes to items exist in global name space
+if(!exists("austraits")) {
+  austraits <- readRDS("data/austraits.rds")
+  # stop("austraits must exist in global name space to knit a report")
+}
+
+definitions <- austraits$definitions
+```
+
 
 ```{r authors, results='asis', echo=FALSE}
 authors <- read_csv("data/authors.csv", col_types = cols(.default = "c"))
@@ -42,53 +51,110 @@ writeLines("\n\n")
 sprintf("^%s^ %s", affils$label, affils$Affiliation) %>% paste0(collapse = "; ") %>% writeLines()
 ```
 
+# Overview
 
-# Abstract
+AusTraits harmonises data on `r austraits$traits$trait_name %>% unique() %>% length()` traits from `r austraits$methods$dataset_id %>% unique() %>% length()` different sources, including field campaigns, published literature, taxonomic monographs, and individual species descriptions.
 
-Species traits have increasingly become an essential metric for comparing ecological strategies among plants across environmental space or evolutionary lineages. This is because traits are useful indicators of the the functions that species perform, regardless of their taxonomy, in communities and ecosystems. Whilst the volume of trait information has grown rapidly in the last two decades through targeted initiatives, the geographic coverage of trait observations across the globe is patchy, making comprehensive analyses of patterns of trait abundance and diversity impossible to achieve in some regions. One such region is Australia; a continent with a flora of over 20,000 higher-plant species, % of which are considered endemic. Here, we introduce a fully open database of XXX plant traits for the Australian Flora (named AusTraits). Austraits synthesises data from field campaigns, published literature, taxonomic monographs, and individual species descriptions. Traits vary in scope from physiological measures of performance (e.g. photosynthetic gas exchange, water-use efficiency, XX) to morphological parameters (e.g. leaf size, seed size, maximum height) which link to ecological strategy variation. AusTraits contains curated and harmonised species- and genus-level observations coupled to, where available, contextual information on site properties. This data descriptor provides information on Version 1.1 of AusTraits which houses data for XXX trait-by-species combinations across XX,XXX species. We envision AusTraits as an on-going collaborative initiative for easily archiving and sharing trait data to increase our collective understanding the Australian flora. 
+This document provides information on the structure of AusTraits and corresponds to Version `r austraits$definitions$austraits$elements$build_info$elements$version$value` of the dataset. 
 
-# Background & Summary 
+# Data structures
 
-- traits now widely agreed as important [@Westoby-2002]
--	Legacy data vs. newly-collected traits  considerations for these differ and Austraits can offer a path for how to sample comprehensively
--	Web portal, maybe like coral traits [@Madin-2016], for easily adding new data which can accommodate a range of user’s capabilities
--	Family level plotting for the paper, featuring two traits – continuous and categorical  height and growth form; two important traits which we have good coverage for
--	CURATED national collection of traits, similar to other biodiversity datasets 
--	Expose decisions which are being made in the processing of data into a harmonised resource with a view to nationalising the availability of trait information, similar to availability similar to the availability of species occurrence data
--	What can a national dataset facilitate? Alignment with conservation management across a federlaised system of government. Global platforms might be best built from national datasets (analogous to the GBIF initiative which aggregates occurrence data assembled by national initiatives). 
--	Current models of trait aggregation are geographically patchy – with some locations comprehensively covered e.g. Europe – but with little taxonomic or functional overlap with other regions (e.g. Africa, Australia). ~5% of the worlds plant species occur in these regions (300 trees in Europe 600 in America; in a single 50-ha plot in Australian tropical forests = same or more species). This actually matters when we increasingly want to apply traits as a proxy for understanding vegetation responses to disturbance and change. Whilst large-scale analyses are relatively well-served by global datasets which have representatives species from each biome or continent, the capacity to explore more nuanced questions about the function of regional vegetation is limited. 
--	Duplication of effort. Austraits will reduce the duplication of effort across government research agencies and university researchers seeking to create trait-based approaches to their questions. 
--	Better stewardship of data when collected by a localised group of interested parties. 
+# Tables
 
-# Methods
+Table 1:  Main elements of Austraits
 
-The data are housed within github repository traitecoevo with sequential releases being made available on this platform and Zenodo/Figshare. Access to Austraits will be  XXX. Austraits can also be accessed via the R package: `austraits` Releases versioned, following [@Falster-2017]
+```{r}
+tibble(
+  Element = names(austraits), 
+  Contents = sapply(austraits$definitions$austraits$elements, "[[", "description") 
+  ) %>% 
+  kable()
+```
 
-## Processing pipeline: 
+Table 2: Traits represented in database
+```{r}
+sites <- austraits$sites %>% 
+  filter(site_property %in%  c("longitude (deg)","latitude (deg)")) %>% 
+  spread(site_property, value)
 
-1. what is the platform for curating and harmonising? 
-2. which decisions do we think it is important to expose e.g. taxonomic alignment, trait mapping == standardisation of names and units, data cleaning processes (e.g. substitutions, reshaping of data, excluding values outside plausible bounds  we can put numbers on these as Daniel has the data-frame of excluded data). 
+data_geo <- 
+  left_join(by=c("dataset_id", "site_name"),
+      select(austraits$traits, -original_name), sites) %>%
+  left_join(by="species_name",
+      select(austraits$taxonomy, species_name, family)) 
 
-In this way we offer more than an aggregation service, but seek to standardise data provided from a range of disparate sources and individuals. 
+n_records <- 
+  data_geo %>% 
+  group_by(trait_name) %>%
+  summarise(
+            Description = "",
+            Type= "",
+            `Records (all)` = n(),
+            `Records (geo.)` = sum(!is.na(`longitude (deg)`) & !is.na(`latitude (deg)`)),
+            Studies = n_distinct(dataset_id),
+            Species = n_distinct(species_name),
+            Families = n_distinct(family)
+            )
 
+n_records$Type <- sapply(austraits$definitions$traits$elements, "[[","type")[n_records$trait_name]
+n_records$Description <- sapply(austraits$definitions$traits$elements, "[[","description")[n_records$trait_name]
 
-## Schema
+n_records %>%
+  arrange(desc(`Records (all)`)) %>% 
+  slice(1:40) %>%
+  kable()
 
-Austraits is designed to collate traits-based measurements with a range of relevant contextual information. Its schema broadly follows the principles of the established Observation and Measurement Ontology [@Madin-2007] in that trait data are connected to contextual information. Data flows from individual ‘studies’ which are any natural grouping for data collections, typically scientific publications, species descriptions, and field campaigns. Austraits currently contains X studies and each study has two associated files: `data.csv` and `metadata.yml`. `Metadata.yml` must conform to a standard set of fields to provide context and options for converting data into standardised format via information on trait-mapping. 
+```
 
-## Traits 
+```{r, results="asis"}
+print_defintions_element <- function(elements) {
+  if(elements$type == "character") {
+    sprintf("**Content:** %s\n", elements$value) %>% 
+      writeLines()
+  }
+  
+  if(elements$type == "table") {
+    
+    sprintf("**Content:** \n") %>% 
+      writeLines()
 
-Includes data for Type
+    elements$elements %>% 
+      list1_to_df() %>%
+      kable() %>% 
+      writeLines()
+  }
+}
 
-## Sources
+for(v in names(austraits)) {
+  elements <- austraits$definitions$austraits$elements[[v]]
+  
+  sprintf("### %s {#%s}\n\n**Description:** %s\n", v, v, elements$description) %>% 
+    writeLines()
+  
+  elements %>%
+    print_defintions_element()
 
-## Measurement
+  writeLines(c(""))
+}
+```
 
-# Taxonomic coverage 
+Value types
 
-Austraits currently contains data for `r austraits$data$species_name %>% unique() %>% length()` species from `r austraits$species_list$family %>% unique() %>% length()` families; with `r austraits$data %>% nrow()` records for `r austraits$data$trait_name %>% unique() %>% length()` traits.   
+```{r, results="asis"}
+austraits$definitions$value_type$values %>% 
+  list1_to_df()  %>% 
+  kable() %>% 
+  writeLines()
+```
+
+\footnotesize
+
+# Data sources:
+
+```{r, results='asis'}
+c(austraits$methods$source_primary_citation %>% unique(),
+austraits$methods$source_secondary_citation %>% unique()) %>% paste(collapse = "\n\n") %>% writeLines()
+```
 
 
 ## References
-
-\footnotesize
